tests/fixtures/errors/e0303_on_in_repeat.mimz
// expect: E0303
module M {
  clock clk
  reset rst
  out y: bits[4]
  reg r: bit = 0
  repeat i: 0..4 {
    on rise(clk) {
      r <- 1
    }
    y[i] = r
  }
}
